# ELFDecoder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml  cmake_debug.yml  cmake_release.yml
lib/: CMakeLists.txt
lib/inc/: elfdecoder.h  utilities.h
lib/src/: elfdecoder.cpp
tests/: CMakeLists.txt  simple_unittest.cpp  test_elfdecoder.cpp  test_utilities.cpp
